--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1459,6 +1459,24 @@ input, select, textarea {
 		margin: 0 auto 2em auto;
 	}
 
+		.gallery article .caption {
+			text-align: center;
+			margin-top: 10px;
+			color: #333;
+		}
+		
+		.gallery article .caption h3 {
+			font-size: 18px;
+			font-weight: bold;
+			margin-bottom: 5px;
+		}
+		
+		.gallery article .caption p {
+			font-size: 14px;
+			color: #666;
+		}
+	
+
 		.gallery article {
 			-moz-transition: -moz-transform 1s ease, opacity 1s ease;
 			-webkit-transition: -webkit-transform 1s ease, opacity 1s ease;
@@ -2293,7 +2311,6 @@ input, select, textarea {
 		padding: 20px;
 	  }
 	  
-	  /* Image Container */
 /* Image Container for the Left Side */
 #one .image-container {
     position: absolute;
@@ -2305,7 +2322,7 @@ input, select, textarea {
 }
 
 #one .image-container img {
-    width: 900px;  /* Adjust size */
+    width: 700px;  /* Adjust size */
     height: auto;
     border-radius: 8px;  /* Optional: rounded corners */
 }
